# public-api-client-example

./: README.md  cli.py  pyproject.toml
